--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <audio id="remoteAudio" autoplay></audio>
     <video id="remoteVideo" width="200px" autoplay></video>
     <script type="text/javascript" src="https://unpkg.com/circuit-sdk/circuit.js"></script>
+    <script type="text/javascript" src="./commandProcess.js"></script>
+    <script type="text/javascript" src="./botState.js"></script>
+    <script type="text/javascript" src="./circuitUtil.js"></script>
   </body>
 </html>
